<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewNombre"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_apellidos" />


    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewApellidos"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_dni" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewDni"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewTelefono"
        android:inputType="phone"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewDepartamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_departamento" />

    <EditText
        android:id="@+id/txtDepartamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewDepartamento"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Localidad" />

    <EditText
        android:id="@+id/txtLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewLocalidad"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_direccion" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewDireccion"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_email" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewEmail"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_horario" />

    <EditText
        android:id="@+id/txtHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewHorario"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/swtEdición"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="Modo Edición" />


</LinearLayout>